[MD Settings][People] Updates positions of username and sync status message

before: https://screenshot.googleplex.com/q9gMEb84CDy
after: https://screenshot.googleplex.com/oobv4yKECg5

This CL also updates sync status messages.

BUG=638464
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2393643004
Cr-Commit-Position: refs/heads/master@{#425991}

Former-commit-id: 9d08a7d8a72909a0c5bfe0ed5cb0b590876b7dcf